--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>守望的个人主页</title>
+<title>威立山</title>
 </head>
 <script language=javascript>
-if (document.domain =='www.huyanbing.me')
+if (document.domain =='www.hellostudy.cn')
 this.location = "http://www.yanbinghu.com" + this.location.pathname + this.location.search;
 </script>
 <body>
