--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 </head>
 <script language=javascript>
 if (document.domain =='www.hellostudy.cn')
-this.location = "http://www.yanbinghu.com" + this.location.pathname + this.location.search;
+this.location = "http://www.sparkplan.net" + this.location.pathname + this.location.search;
 </script>
 <body>
  <h1></h1>
