--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>守望的个人主页</title>
 </head>
 <script language=javascript>
-if (document.domain =='www.huyanbing.me')
-this.location = "https://www.yanbinghu.com" + this.location.pathname + this.location.search;
+if (document.domain =='www.hellostudy.cn')
+this.location = "https://www.sparkplan.net" + this.location.pathname + this.location.search;
 </script>
 <body>
  <h1></h1>
